Fixed horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
 }
 
 .container {
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -132,7 +132,7 @@ body {
 	flex-direction: column;
 	background-color: var(--card-colour);
 	color: var(--font-colour);
-	width: 90%;
+	width: 80%;
 	border-radius: 5px;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 	transition: ease 250ms;
@@ -147,7 +147,7 @@ body {
 
 .stats-card {
 	color: var(--font-colour);
-	width: 90%;
+	width: 80%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
